[commit-status-publisher] javac-release-flag-compat --add-opens