@@ -31,10 +31,8 @@ dependencies {
   testImplementation("org.jetbrains.teamcity:web-test-core:$teamcityVersion") {
       exclude group: 'com.google.guava', module: 'guava'
     }
-  testImplementation "jmock:jmock:1.2.0"
   testImplementation 'org.assertj:assertj-core:1.7.1'
-  testImplementation 'org.testng:testng:6.8'
-  testImplementation "org.mockito:mockito-core:3.9.0"
+  testImplementation "org.mockito:mockito-core:4.11.0"
 }
 
 sourceSets {
@@ -52,7 +50,23 @@ test {
   }
 }
 
+
+tasks.withType(Test).configureEach {
+  if (JavaVersion.current().isJava9Compatible()) {
+    jvmArgs += [
+      "-XX:+IgnoreUnrecognizedVMOptions",
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.io=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+      "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
+      "--add-opens=java.base/sun.security.util=ALL-UNNAMED",
+      "-Djava.security.manager=allow",
+    ]
+  }
+}
+
 jar {
-  archiveBaseName = 'commit-status-publisher'
-  archiveVersion =  "$teamcityVersion"
+  archiveFileName = 'commit-status-publisher.zip'
 }
